--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/RecargaCombustibles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/RecargaCombustibles/Index.cshtml
@@ -115,7 +115,7 @@
                                         {
                                             settings.Name = "KilometrajeRecorrido";
                                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                            settings.Properties.MaskSettings.Mask = "<0..999999>";
+                                            //settings.Properties.MaskSettings.Mask = "<0..999999>";
                                             settings.Properties.MaskSettings.ErrorText = "Kilometraje Recorrido";
                                             settings.Properties.ValidationSettings.Display = Display.Dynamic;
                                         }).Bind(Model.KilometrajeRecorrido).GetHtml()
@@ -132,7 +132,7 @@
                                         {
                                             settings.Name = "LitrosRecargados";
                                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                            settings.Properties.MaskSettings.Mask = "<0..999999>";
+                                            //settings.Properties.MaskSettings.Mask = "<0..999999>";
                                             settings.Properties.MaskSettings.ErrorText = "Litros Recargados";
                                             settings.Properties.ValidationSettings.Display = Display.Dynamic;
                                         }).Bind(Model.LitrosRecargados).GetHtml()
