--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using MVC.Presentacion.Models.Catalogos
 @model  EmpresaModel
 @{
-    ViewBag.Title = "Emporesas";
+    ViewBag.Title = "Empresas";
 }
 
 @Html.DevExpress().GetStyleSheets(
