--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_pagar.xml
@@ -43,7 +43,7 @@
             <ScrollView
                 android:id="@+id/scrollView4"
                 android:layout_width="match_parent"
-                android:layout_height="400sp"
+                android:layout_height="370sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
@@ -155,7 +155,7 @@
                 android:id="@+id/SPuntoVentaPagarActivityFactura"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="70dp"
                 android:layout_marginEnd="8dp"
                 android:checked="true"
                 android:text="@string/factura"
@@ -169,11 +169,28 @@
                 android:id="@+id/SPuntoVentaActivityCredito"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="36dp"
                 android:layout_marginRight="36dp"
                 android:layout_marginBottom="12dp"
                 android:text="@string/credito"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/TVPuntoVentaActivityPagarTotal"
+                app:layout_constraintVertical_bias="0.0"
+
+                 />
+
+            <Switch
+                android:id="@+id/SPuntoVentaActivityBonificacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="36dp"
+                android:layout_marginRight="36dp"
+                android:layout_marginBottom="17dp"
+                android:text="Bonificación"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityConfirmar"
                 app:layout_constraintEnd_toEndOf="parent"
