JSA - Reporte Inv. Por punto de venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Historico/HistoricoVentas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Historico/HistoricoVentas.cshtml
@@ -13,7 +13,7 @@
         )
 <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
 <script src="~/assets/js/pages/ui/notifications.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
+<script src="~/assets/plugins/raphael/raphael-min.js"></script>
 <script src="~/assets/plugins/morrisjs/morris.js"></script>
 <link rel="stylesheet" href="~/assets/plugins/morrisjs/morris.css"/>
 
