--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
@@ -12,6 +12,8 @@
     )
 <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
 <script src="~/assets/js/pages/ui/notifications.js"></script>
+<link rel="stylesheet" href="~/assets/plugins/jqueryui/jquery-ui.css"  />
+<script src="~/assets/plugins/jqueryui/jquery-ui.js"></script>
 <script type="text/javascript">
     var mensaje = '@ViewBag.Msj';
     if (mensaje != '') {
@@ -58,8 +60,31 @@
         });
     });
 
+    function openFile(e) {
+        var image = new Image();
+        image.width= 480;
+        image.height=320;
+        image.src = e.src;
+        $("#imgdialog").html(image.outerHTML);
+        $("#dialog").dialog();
+    }
+
 </script>
+
+
+<style>
+
+    .imgCss:hover {
+        -webkit-transform: scale(2.0);
+        transform: scale(2.0)
+    }
+</style>
+
 <body>
+    <div id="dialog" title="Fotógragia">
+        <div id="imgdialog"></div>
+    </div>
+
     <div class="page-loader-wrapper">
         <div class="loader">
             <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
@@ -137,11 +162,11 @@
                                     <div class="table-responsive">
                                         @if (TempData["DataSource"] != null)
                                         {
-                                            @Html.Partial("_CuboDeInformacionPartial", (List<InventarioPorPuntoVentaDTO>)TempData["DataSource"])
+                                            @Html.Partial("_CuboInvXPunVen", (List<InventarioPorPuntoVentaDTO>)TempData["DataSource"])
                                         }
                                         else
                                         {
-                                            @Html.Partial("_CuboDeInformacionPartial", new List<InventarioPorPuntoVentaDTO>())
+                                            @Html.Partial("_CuboInvXPunVen", new List<InventarioPorPuntoVentaDTO>())
                                         }
                                         <span>Intencionalmente sin acentos</span>
                                     </div>
